--- a/ReadOnlySpanExtensions/ReadOnlySpanExtensions.csproj
+++ b/ReadOnlySpanExtensions/ReadOnlySpanExtensions.csproj
@@ -1,6 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
+        <Version>1.0.1</Version>
+        <PackageReleaseNotes>Fixed README</PackageReleaseNotes>
         <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
