--- a/ReadOnlySpanExtensions/ReadOnlySpanExtensions.csproj
+++ b/ReadOnlySpanExtensions/ReadOnlySpanExtensions.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <Version>1.0.1</Version>
-        <PackageReleaseNotes>Fixed README</PackageReleaseNotes>
+        <PackageReleaseNotes>Modified &amp; fixed README for NuGet.</PackageReleaseNotes>
         <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
