--- a/ReadOnlySpanExtensions/ReadOnlySpanExtensions.csproj
+++ b/ReadOnlySpanExtensions/ReadOnlySpanExtensions.csproj
@@ -1,9 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <Version>1.3.0</Version>
-        <PackageReleaseNotes>v1.3.0
-- Added SpainPairSurrounding.
+        <Version>1.3.1</Version>
+        <PackageReleaseNotes>v1.3.1
+- Fixed README typo.
+
+v1.3.0
+- Added SpanPairSurrounding.
 
 v1.2.1
 - Validity check for SpanCount.
