--- a/ReadOnlySpanExtensions/ReadOnlySpanExtensions.csproj
+++ b/ReadOnlySpanExtensions/ReadOnlySpanExtensions.csproj
@@ -1,8 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <Version>1.5.0</Version>
-        <PackageReleaseNotes>v1.5.0
+        <Version>1.6.0</Version>
+        <PackageReleaseNotes>v1.6.0
+- Added SpanRemoveBetween &amp; SpanRemoveBetweenIncluding.
+
+v1.5.0
 - Added SpanBetweenLast.
 
 v1.4.0
